...
        )
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("MovieList")
        ) {
            items(buyMoviesTicket) { data ->
                MovieItem(
                    title = data.movies.title,
                    photoUrl = data.movies.photoUrl,
                    price = data.movies.price,
...
